Editing html to my personalization

--- a/wahyuwiyoko.github.io-main/index.html
+++ b/wahyuwiyoko.github.io-main/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Wahyu Wiyoko's portfolio website to showcase various projects.">
+    <meta name="description" content="Elliott's portfolio website to showcase various projects.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Wahyu Wiyoko</title>
+    <title>Elliott Serna</title>
   </head>
   <body>
     <main>
       <section>
-        <h1>Wahyu Wiyoko</h1>
+        <h1>Elliott Serna</h1>
         <p>
-          A back-end developer from Indonesia. Currently learning system
-          design and back-end stuff, especially Go and RESTful API.
+          Student studying public policy at Cornell University. 
+          Nerd for housing, transportation, urban planning, and bureaucracy. 
+          Interested in the quant end of policy research
         </p>
 
         <ul class="social links">
           <li>
-            <a href="mailto:wiyoko@protonmail.com" target="_blank">Email</a>
+            <a href="mailto:es2242@cornell.edu" target="_blank">Email</a>
           </li>
           <li>
-            <a href="https://github.com/wahyuwiyoko" target="_blank">GitHub</a>
+            <a href="https://github.com/elliottserna" target="_blank">GitHub</a>
           </li>
           <li>
-            <a href="https://wahyuwiyoko.github.io/blog/">Blog</a>
+            <a href="https://elliottserna.github.io/blog/">Blog</a>
           </li>
         </ul>
       </section>
@@ -34,14 +35,11 @@
         <h2>Skills</h2>
 
         <ul class="skills">
-          <li>Go</li>
-          <li>Kotlin</li>
-          <li>Bash</li>
-          <li>Lua</li>
-          <li>SQL</li>
+          <li>STATA</li>
+          <li>R</li>
+          <li>Some Python</li>
+          <li>Policy Analysis</li>
           <li>Git</li>
-          <li>Docker</li>
-          <li>GNU/Linux</li>
         </ul>
       </section>
 
@@ -50,44 +48,43 @@
 
         <div class="projects">
           <article>
-            <h3>Dark Moon</h3>
+            <h3>Housing Research For Maine People's Alliance</h3>
             <p>
-              A dark Neovim color scheme derived from blue-moon.
+              Research assistant for Brooks School Senior Associate Dean of Public Engagement, Dr. Jamila Michener, in partnership with Maine People's Alliance.
             </p>
 
             <ul class="links">
               <li>
-                <a href="https://github.com/wahyuwiyoko/dark-moon.nvim" target="_blank">Code</a>
+                <a href="https://mainepeoplesalliance.org/" target="_blank">Maine People's Alliance</a>
+              </li>
+              <li>
+                <a href="https://publicpolicy.cornell.edu/impact/engagement/" target="_blank">Brooks School</a>
               </li>
             </ul>
           </article>
 
           <article>
-            <h3>i3 Color Configurator</h3>
+            <h3>Future Caucus</h3>
             <p>
-              i3 color configurator for i3, i3status, and dmenu.
+              Policy intern with Future Caucus, a DC-based non-profit supporting Millenial and Gen-Z lawmakers with robust legislative resources.
             </p>
 
             <ul class="links">
               <li>
-                <a href="https://wahyuwiyoko.github.io/i3-color-configurator/" target="_blank">Website</a>
-              </li>
-              <li>
-                <a href="https://github.com/wahyuwiyoko/i3-color-configurator" target="_blank">Code</a>
+                <a href="https://futurecaucus.org/" target="_blank">Future Caucus</a>
               </li>
             </ul>
           </article>
 
           <article>
-            <h3>SiMiFox</h3>
+            <h3>Cornell Policy Group</h3>
             <p>
-              A simple and minimal Firefox custom configuration to enhance
-              privacy, security, performance, and UI simplicity.
+              Domestic policy analyst for Cornell's premier undergraduate think-tank, writing on development policy and government administration.
             </p>
 
             <ul class="links">
               <li>
-                <a href="https://github.com/wahyuwiyoko/simifox" target="_blank">Code</a>
+                <a href="https://cornellpolicygroup.org/" target="_blank">CPG</a>
               </li>
             </ul>
           </article>
