Styling html/css and adding info

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section>
         <h1>Elliott Serna</h1>
         <p>
-          Student studying public policy at Cornell University. 
+          Policy student at Cornell University. 
           Nerd for housing, transportation, urban planning, and bureaucracy. 
-          Interested in the quant end of policy research
+          Interested in the Quant end of policy research.
         </p>
 
         <ul class="social links">
@@ -31,23 +31,31 @@
           <li>
             <a href="https://elliottserna.github.io/blog/">Blog</a>
           </li>
+          <li>
+            <a href="assets/elsernresume.pdf" target="_blank">Resume</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/elliottserna/" target="_blank">LinkedIn</a>
+          </li>
         </ul>
       </section>
 
       <section>
-        <h2>Skills</h2>
+        <h2>Featured Skills</h2>
 
         <ul class="skills">
           <li>STATA</li>
-          <li>R</li>
-          <li>Some Python</li>
-          <li>Policy Analysis</li>
+          <li>(Basic) R</li>
+          <li>(Basic) Python</li>
           <li>Git</li>
+          <li>Policy Analysis</li>
+          <li>Cost-Benefit Analysis</li>
+          <li>Spanish Translation & Interpretation</li>
         </ul>
       </section>
 
       <section>
-        <h2>Projects</h2>
+        <h2>Recent Work</h2>
 
         <div class="projects">
           <article>
