Changing my bio on main page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Elliott Serna</h1>
         <p>
           Policy student at Cornell University. 
-          Nerd for housing, transportation, urban planning, and bureaucracy. 
+          Nerd for housing, transportation, economic development, and bureaucracy. 
           Interested in the Quant end of policy research.
         </p>
 
