--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Elliott's portfolio website to showcase various projects.">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Elliott Serna</title>
   </head>
