Updating resume, blog links, and projects

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <li>(Basic) R</li>
           <li>(Basic) Python</li>
           <li>Git</li>
+          <li>LaTeX</li>
           <li>Policy Analysis</li>
           <li>Cost-Benefit Analysis</li>
           <li>Spanish Translation & Interpretation</li>
@@ -58,6 +59,22 @@
         <h2>Recent Work</h2>
 
         <div class="projects">
+          <article>
+            <h3>Office of Assemblymember Sabrina Cervantes</h3>
+            <p>
+              District office intern for California State Assemblymember and California Latino Legislative Caucus chair, Hon. Sabrina Cervantes (AD58).
+            </p>
+
+            <ul class="links">
+              <li>
+                <a href="https://a58.asmdc.org/" target="_blank">AD58</a>
+              </li>
+              <li>
+                <a href="https://latinocaucus.legislature.ca.gov/" target="_blank">Latino Caucus</a>
+              </li>
+            </ul>
+          </article>
+
           <article>
             <h3>Housing Research For Maine People's Alliance</h3>
             <p>
@@ -75,6 +92,19 @@
           </article>
 
           <article>
+            <h3>Cornell Policy Group</h3>
+            <p>
+              Domestic policy center director for Cornell's premier undergraduate think-tank, overseeing publications on national issues in the US.
+            </p>
+
+            <ul class="links">
+              <li>
+                <a href="https://cornellpolicygroup.org/" target="_blank">CPG</a>
+              </li>
+            </ul>
+          </article>
+
+          <article>
             <h3>Future Caucus</h3>
             <p>
               Policy intern with Future Caucus, a DC-based non-profit supporting Millenial and Gen-Z lawmakers with robust legislative resources.
@@ -87,18 +117,6 @@
             </ul>
           </article>
 
-          <article>
-            <h3>Cornell Policy Group</h3>
-            <p>
-              Domestic policy analyst for Cornell's premier undergraduate think-tank, writing on development policy and government administration.
-            </p>
-
-            <ul class="links">
-              <li>
-                <a href="https://cornellpolicygroup.org/" target="_blank">CPG</a>
-              </li>
-            </ul>
-          </article>
         </div>
       </section>
     </main>
