Updated LDI job, skills, and added .gitignore

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <ul class="skills">
           <li>STATA</li>
           <li>R</li>
-          <li>(Basic) Python</li>
+          <li>Python</li>
+          <li>Jupyter</li>
           <li>Git</li>
           <li>LaTeX</li>
           <li>Policy Analysis</li>
@@ -57,6 +58,23 @@
 
       <section>
         <h2>Recent Work</h2>
+        
+        <div class="projects">
+          <article>
+            <h3>Labor Dynamics Institute (LDI) Replication Lab</h3>
+            <p>
+              Research assistant at the LDI Replication lab, assisting the American Economic Association's (AEA) Data Editor replicate forthcoming economic research across nine journals.
+            </p>
+
+            <ul class="links">
+              <li>
+                <a href="https://www.ilr.cornell.edu/labor-dynamics-institute/ldi-replication-lab" target="_blank">LDI Replication Lab</a>
+              </li>
+              <li>
+                <a href="https://www.aeaweb.org/journals/data" target="_blank">AEA Data Editor</a>
+              </li>
+            </ul>
+          </article>
 
         <div class="projects">
           <article>
