--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li>STATA</li>
           <li>R</li>
           <li>Python</li>
+          <li>MATLAB</li>
           <li>Jupyter</li>
           <li>Git</li>
           <li>LaTeX</li>
