--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Elliott Serna</h1>
         <p>
           Policy student at Cornell University. 
-          Nerd for housing, transportation, economic development, and bureaucracy. 
+          Nerd for econometrics, computational social science, political economy, and bureaucracy. 
           Interested in the Quant end of policy research.
         </p>
 
@@ -48,12 +48,28 @@
           <li>R</li>
           <li>Python</li>
           <li>MATLAB</li>
-          <li>Jupyter</li>
+          <li>JupyterBook</li>
           <li>Git</li>
           <li>LaTeX</li>
-          <li>Policy Analysis</li>
-          <li>Cost-Benefit Analysis</li>
+          <li>Causal Inference</li>
+          <li>Supervised & Unsupervised ML</li>
           <li>Spanish Translation & Interpretation</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Honors</h2>
+
+        <ul class="honors">
+          <li>
+            <a href="https://oadi.cornell.edu/signature-programs/ronald-e-mcnair-post-baccalaureate-achievement-program">McNair Scholar</a>
+          </li>
+          <li>
+            <a href="https://publicpolicy.cornell.edu/iopga/student-engagement/undergraduate-scholar-program/">Cornell Institute of Politics & Global Affairs Undergraduate Scholar</a>
+          </li>
+          <li>
+            <a href="https://www.hsf.net">Hispanic Scholarship Fund Scholar</a>
+          </li>
         </ul>
       </section>
 
