Update IOPGA Scholar title

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://oadi.cornell.edu/signature-programs/ronald-e-mcnair-post-baccalaureate-achievement-program">McNair Scholar</a>
           </li>
           <li>
-            <a href="https://publicpolicy.cornell.edu/iopga/student-engagement/undergraduate-scholar-program/">Cornell Institute of Politics & Global Affairs Undergraduate Scholar</a>
+            <a href="https://publicpolicy.cornell.edu/iopga/student-engagement/undergraduate-scholar-program/">Cornell University Institute of Politics & Global Affairs Undergraduate Scholar</a>
           </li>
           <li>
             <a href="https://www.hsf.net">Hispanic Scholarship Fund Scholar</a>
