Initial headshot upload

--- a/index.html
+++ b/index.html
@@ -13,32 +13,30 @@
   </head>
   <body>
     <main>
-      <section>
-        <h1>Elliott Serna</h1>
-        <p>
-          Policy student at Cornell University. 
-          Nerd for econometrics, computational social science, political economy, and bureaucracy. 
-          Interested in the Quant end of policy research.
-        </p>
-
-        <ul class="social links">
-          <li>
-            <a href="mailto:es2242@cornell.edu" target="_blank">Email</a>
-          </li>
-          <li>
-            <a href="https://github.com/elliottserna" target="_blank">GitHub</a>
-          </li>
-          <li>
-            <a href="https://elliottserna.github.io/blog/">Blog</a>
-          </li>
-          <li>
-            <a href="assets/elsernresume.pdf" target="_blank">Resume</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/elliottserna/" target="_blank">LinkedIn</a>
-          </li>
-        </ul>
-      </section>
+      <section class="about">
+        <div class="about-content">
+          <div class="text">
+            <h1>Elliott Serna</h1>
+            <p>
+              Policy student at Cornell University. 
+              Nerd for econometrics, computational social science, political economy, and bureaucracy. 
+              Interested in the Quant end of policy research.
+            </p>
+      
+            <ul class="social-links">
+              <li><a href="mailto:es2242@cornell.edu" target="_blank">Email</a></li>
+              <li><a href="https://github.com/elliottserna" target="_blank">GitHub</a></li>
+              <li><a href="https://elliottserna.github.io/blog/">Blog</a></li>
+              <li><a href="assets/elsernresume.pdf" target="_blank">Resume</a></li>
+              <li><a href="https://www.linkedin.com/in/elliottserna/" target="_blank">LinkedIn</a></li>
+            </ul>
+          </div>
+      
+          <div class="photo">
+            <img src="assets/headshot.jpg" alt="Elliott Serna">
+          </div>
+        </div>
+      </section>      
 
       <section>
         <h2>Featured Skills</h2>
