--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
       
           <div class="photo">
-            <img src="assets/elliott-photo.jpg" alt="Elliott Serna">
+            <img src="assets/headshot.jpg" alt="Elliott Serna">
           </div>
         </div>
       </section>
