Add upcoming work section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
       </section>
 
       <section>
+        <h2>Upcoming Work</h2>
+        
+        <div class="projects">
+          <article>
+            <h3>Harvard Kennedy School</h3>
+            <p>
+              Undergraduate Research Fellow at The People Lab under Dr. Elizabeth Linos, researching public administration and behavioral economics to improve public service delivery.
+            </p>
+
+            <ul class="links">
+              <li>
+                <a href="https://peoplelab.hks.harvard.edu" target="_blank">The People Lab</a>
+              </li>
+            </ul>
+          </article>
+      </section>
+
+      <section>
         <h2>Recent Work</h2>
         
         <div class="projects">
