--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
         <div class="projects">
           <article>
-            <h3>Harvard Kennedy School</h3>
+            <h3>The People Lab @ Harvard Kennedy School</h3>
             <p>
               Undergraduate Research Fellow at The People Lab under Dr. Elizabeth Linos, researching public administration and behavioral economics to improve public service delivery.
             </p>
